--- a/mtj/scss/main.scss
+++ b/mtj/scss/main.scss
@@ -13,6 +13,10 @@ svg {
 img{
 	width:100%;
 }
+
+h1, h2, h3, h4, h5, h6{
+	font-family:'Poppins', sans-serif; 
+}
  
 .mt-0{
 margin:0px; 
@@ -80,7 +84,24 @@ li{
 	align-items: center;
 	justify-content: space-between; 
 	padding:10px 0;
-	position:relative; 
+	background:#fff;
+	&>.container{
+		position:relative; 
+	}
+	&.fixed{
+		position: fixed;
+		background:rgba(255,255,255,0.9);
+		width: 100%;
+		z-index: 1;
+		box-shadow: 1px 0px 5px rgba(0,0,0,0.50);
+		.logo{
+			background:none;
+			box-shadow: none; 
+			height: 53px;
+			top: -2px;
+			padding:0px;
+		}
+	}
 	.logo { 
 		position: absolute;
 		left:0px;
@@ -91,6 +112,7 @@ li{
 		z-index: 1;
 		background:#fff;
 		box-shadow: 1px 0px 5px rgba(0,0,0,0.50); 
+		transition: all .2s;
 		img 
 		{width:100%;} 	
 	}
@@ -98,6 +120,12 @@ li{
 		text-transform: uppercase; 
 		margin: 0px; 
 	}  
+	.btn{ 
+		position: absolute; 
+		right: 0;
+		top: 8px;
+		z-index:9999;
+	}
 }
 .navbar-inverse{
 	background:none;
@@ -110,13 +138,15 @@ li{
 		display: table;
 		margin: 0 auto;
 		li{
+			background-color:#fff;
+			border-radius: 3px;
+			margin:0 3px;
+			overflow: hidden;
 			a{
 				color:#212121; 
 				text-shadow: none;
 				text-transform: uppercase;
 				padding: 5px 10px; 
-				margin:0 3px;
-				border-radius: 3px;
 				font-weight: bold; 
 				&:focus, &:hover{
 					background-color:#d9ede4;
@@ -133,8 +163,42 @@ li{
 	}
 }
 
+
+.heading-highlighter{
+	color:#056839;
+}
+
 .bread-crum{
 	margin-top:50px;
+}
+
+.donation-form{
+	position: fixed;
+	width:40%;
+	height: calc(100vh);
+	padding:15px;
+	background:#fff;
+	z-index: 99999;
+	right:-40%;
+	
+}
+.d-form-overlay{
+	background: rgba(0,0,0,0.70);
+	position: fixed;
+	width: 0;
+	height:0;
+}
+
+.form-slider{
+	overflow: hidden;
+	.donation-form{
+		right:0px;
+	}
+	.d-form-overlay{
+		width: 100%;
+		height:100%;
+		z-index: 99999;
+	}
 }
 
 .about-us{
@@ -158,10 +222,10 @@ li{
 }
 
 .section-03{
-	margin:40px 0px 25px;
+	margin:40px 0px;
+	background-image:linear-gradient(to right, #17995b 50% , transparent 50%);
 	.endo-info{
 		padding:15px;
-		background:#17995b;
 		color:#fff;
 	}
 }
@@ -197,12 +261,6 @@ li{
 	}
 }
 
-
-#navbar .btn{ 
-	position: absolute; 
-	right: 0;
-	top: 8px;
-}
 
 .lable-strip{
 	background:#da5004;
