--- a/mtj/css/main.css
+++ b/mtj/css/main.css
@@ -147,7 +147,8 @@ li {
   padding: 15px;
   background: #fff;
   z-index: 99999;
-  right: -40%; }
+  right: -40%;
+  transition: all .2s; }
 
 .d-form-overlay {
   background: rgba(0, 0, 0, 0.7);
