--- a/mtj/scss/main.scss
+++ b/mtj/scss/main.scss
@@ -288,6 +288,16 @@ li{
 	}
 }
 
+.events-view{
+	.card{
+		display:flex;
+		img{
+			width:250px;
+			margin-right: 20px;
+		}
+	}
+}
+
 #myCarousel-1{
 	height:350px;
 	.quotes{
