--- a/mtj/scss/main.scss
+++ b/mtj/scss/main.scss
@@ -5,6 +5,9 @@ body {
 	background:#fff;
 	font-size:16px;
 	color: #5B5B5B;
+	p, a{
+		font-weight: 300; 
+	}
 }
 
 svg {
@@ -24,7 +27,10 @@ h1, h2, h3, h4, h5, h6{
 .form-inline {
 	margin-bottom:15px;
 	.form-group{
-		width:49.6%;
+		width:48%;
+		&:nth-child(2){
+			margin-left:3%;
+		}
 		.form-control{
 			width: 100%;
 		}
@@ -70,10 +76,13 @@ svg:not(:root) {
 .d-flex{
 	display:flex;  
 }
-
+.running-text{
+	font-weight:500;
+}
 .btn{
 	border-radius:3px; 
-	text-transform: capitalize;
+	text-transform: uppercase;
+	padding:12px;
 }
 
 .btn-primary{
@@ -82,6 +91,11 @@ svg:not(:root) {
 	&:hover{
 		background:#570596;
 	}
+}
+
+.btn-default{
+	border:2px solid #772ab3;
+	color:#772ab3;
 }
 
 ul{
@@ -104,7 +118,7 @@ li{
 	&.fixed{
 		position: fixed;
 		width: 100%;
-		z-index: 1;
+		z-index: 2;
 		box-shadow: 1px 0px 5px rgba(0,0,0,0.50);
 		.logo{
 			background:none;
@@ -137,6 +151,7 @@ li{
 		right: 0;
 		top: 8px;
 		z-index:9999;
+		padding:6px 12px;
 	}
 }
 .navbar-inverse{
@@ -181,6 +196,9 @@ li{
 
 .bread-crum{
 	margin-top:50px;
+	a{
+		text-decoration:underline;
+	}
 }
 
 .donation-form{
@@ -192,17 +210,16 @@ li{
 	z-index: 99999;
 	right:-40%;
 	transition: all .2s;
-	.form-inline {
-		.form-group {
-			width: 49.5%;
-		}	
-	}
 }
 .d-form-overlay{
 	background: rgba(0,0,0,0.70);
 	position: fixed;
 	width: 0;
 	height:0;
+}
+
+.letter{
+	padding:30px;
 }
 
 .form-btn{
@@ -226,9 +243,21 @@ li{
 	}
 }
 
+section{
+	h1,p{
+		margin:15px 0 20px;
+	}
+}
 .about-us{
-	margin:50px 0px; 
-	
+	margin:50px 0px; 	
+	.address{
+		p{
+			b{
+				display:block;
+				font-weight: 500;
+			}
+		}
+	}
 }
 .gallary-view{
 	margin-top:50px;
@@ -274,24 +303,43 @@ li{
 }
 .section-02{
 	background:#f2f3f4; 
+	height:550px;
+	img{
+		height:550px;
+		width:40%;
+		object-fit: cover;
+		position:absolute;
+	}
 	.card{
-		border:2px solid #9359c1; 
+		background:#fff; 
+		box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.10);
 		text-align: center;
 		padding:15px;
+		border-radius:5px;
+		margin-top:25px;
+		cursor:pointer;
 		p{
 			font-weight: bold;
 			color:#9359c1;
+			font-size: 30px;
+			line-height: 20px;
+		}
+		&:hover{
+			box-shadow: 0px 1px 2px 3px rgba(119, 42, 179, 0.75);
+			background:#f2e7fa;
+		}
+		.btn{
+			padding: 6px 12px;
+			text-transform: uppercase;
 		}
 	}
-	img{
-		height:480px; 
-	}
+
 }
 
 .section-03{
 	margin:40px 0px;
-
 	background-image:linear-gradient(to right, #17995b 50% , transparent 50%);
+	
 	.endo-info{
 		padding:15px;
 		color:#fff;
@@ -304,6 +352,7 @@ li{
 		img{
 			width:250px;
 			margin-right: 20px;
+			object-fit: cover;
 		}
 	}
 }
@@ -356,7 +405,8 @@ li{
 }
 
 #myCarousel-1{
-	height:350px;
+	height:400px;
+	margin-left: 40px;
 	&.slider{
 		height:auto;
 		.slick-dots {
@@ -389,10 +439,14 @@ li{
 			p{
 				display: flex;
     			align-items: center;
+				font-size:14px;
+				b{
+					font-size: 16px;
+				}
 			}
 		img{
-			width:50px; 
-			height:50px;
+			width:100px; 
+			height:100px;
 			border-radius: 50%;
 			overflow: hidden;
 			margin-right: 15px;
@@ -521,6 +575,10 @@ li{
 			}
 		}
 	}
+	h3, h4{
+		font-weight: 700;
+		font-size:30px;
+	}
 	h3{
 		color:#206ac0;
 	}
@@ -528,7 +586,8 @@ li{
 		color:#662d91;
 	}
 	.quotes{
-		border:2px dashed #cbcdd3;
+		background:#ebf2ff;
+		border:1px dashed #cbcdd3;
 		color: #000;
 		display: flex;
 		padding: 10px;
@@ -629,10 +688,14 @@ ul.list {
 }
 
 .main-banner {
-	background: url(../images/banner-1.jpg) no-repeat top center fixed; 
+	background: url(../images/banner-1.png) no-repeat top center;
 	background-size: cover;
+	height:750px;
 	.container{
 		position: relative; 
+		.carousel-inner{
+			height:750px;
+		}
 	}
 .plane-baneer{
 	img{
@@ -650,23 +713,29 @@ ul.list {
 				background:#da5004;
 			}
 		}
-	}
-	
+	}	
 	.carousel-caption{
 			padding:15px;  
 			width:40%;  
-			left: 70px;
+			left: -15px;
 			text-align:left;
 			top: 50%;
-    		margin-top: -15%;
+			height:100%;
+			margin-top:-200px;
+			z-index: 0;
+			text-shadow:none;
 				h1{
 					color:#fff;
-					font-weight:bold; 
+					font-weight:800; 
 					margin:0 0 15px;
 				}
 				h3{
 					color:#EEEF3A;
-					font-weight:bold;
+					font-weight:800;
+					margin:20px 0px;
+				}
+				.btn{
+					margin-top:15px;
 				}
 		
 	}
@@ -674,12 +743,17 @@ ul.list {
 
 .footer{
 	background:#3f2255;  
-	padding:25px 0 0;
+	padding:25px 0;
+	font-weight: normal;
 	.btn{
 		border:1px solid #fff !important; 
+		padding:6px 12px;
 	} 
 	h4, p, h5{   
 		color:#fff; 
+	}
+	h4{
+		font-size:20px;
 	}
 	svg{
 		fill: #fff;    
@@ -689,9 +763,12 @@ ul.list {
 	}
 	.address{
 		margin-top:20px;
+		p{
+			font-size:14px;
+		}
 	}
 	.footer-logo{ 
-		margin-bottom: 35px;
+		margin: 35px 0px;
 		img{
 			background: #fff;
     		padding: 10px;
@@ -712,19 +789,23 @@ ul.list {
 			color:#fff;
 			a{
 				color:#fff;
+				font-size:14px;
 			}
 		}
 		
 	}
 	.col{
-		border-right:1px solid rgba(255,255,255, .2);
-		&:last-child{
-			border:none;
+		
+		&:nth-child(2){
+			padding:0px 50px;
+			margin:0px 50px;
+			border-right:1px solid rgba(255,255,255, .2);
+			border-left:1px solid rgba(255,255,255, .2);
 		}
 	}
 } 
 
-@media (max-width: 576px) {
+@media (max-width: 780px) {
 	.bw-header{
 		display:block;
 		box-shadow: 1px 0px 5px rgba(0,0,0,0.50);
@@ -749,6 +830,13 @@ ul.list {
 	}
 	.bread-crum{
 		margin:0;
+	}
+	.section-02{
+		height: auto;
+		img{
+			width: 100%;
+			position: relative;
+		}
 	}
 	.form-btn{
 		i{
@@ -810,13 +898,24 @@ ul.list {
 			text-align: center;  
 		}
 		.col{
-			border-right:none;
-			border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+			&:nth-child(2){
+				border-right:none;
+				border-left:none;
+				border-top: 1px solid rgba(255, 255, 255, 0.2);
+				border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+				padding:15px 0px;
+				margin:15px 0px;
+			}
 		}
 	}
 
-	#myCarousel{
-		display:none;
+	.main-banner{
+		#myCarousel {
+			margin-left: 0px;
+			.carousel-caption{
+				width: 100%;
+			}
+		}
 		}
 	  
 	.picsum-img-wrapper{
