--- a/mtj/css/main.css
+++ b/mtj/css/main.css
@@ -6,7 +6,7 @@ body {
   font-size: 16px;
   color: #5B5B5B; }
   body p, body a {
-    font-weight: 300; }
+    font-weight: 400; }
 
 svg {
   vertical-align: middle;
@@ -19,6 +19,9 @@ img {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
   margin: 0px 0px 10px; }
+
+.form-control {
+  height: 45px; }
 
 .form-inline {
   margin-bottom: 15px; }
@@ -72,9 +75,10 @@ svg:not(:root) {
 
 .btn-primary {
   background: #772ab3;
-  border: none !important; }
-  .btn-primary:hover {
-    background: #570596; }
+  border: 2px solid #772ab3; }
+  .btn-primary:hover, .btn-primary:active, .btn-primary:focus {
+    background: #570596 !important;
+    border: 2px solid #570596 !important; }
 
 .btn-default {
   border: 2px solid #772ab3;
@@ -97,7 +101,7 @@ li {
   .bw-header.fixed {
     position: fixed;
     width: 100%;
-    z-index: 2;
+    z-index: 20;
     box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.5); }
     .bw-header.fixed .logo {
       background: none;
@@ -141,13 +145,14 @@ li {
     .navbar-inverse .navbar-nav li {
       background-color: #fff;
       border-radius: 3px;
-      margin: 0 3px;
+      margin: 0 10px;
       overflow: hidden; }
       .navbar-inverse .navbar-nav li a {
         color: #212121;
         text-shadow: none;
         text-transform: uppercase;
-        padding: 5px 10px; }
+        padding: 5px 10px;
+        font-weight: 500; }
         .navbar-inverse .navbar-nav li a:focus, .navbar-inverse .navbar-nav li a:hover {
           background-color: #d9ede4;
           color: #212121; }
@@ -172,6 +177,8 @@ li {
   z-index: 99999;
   right: -40%;
   transition: all .2s; }
+  .donation-form h1 {
+    margin-bottom: 30px; }
 
 .d-form-overlay {
   background: rgba(0, 0, 0, 0.7);
@@ -289,7 +296,8 @@ section h1, section p {
     .news-events-view .nav-tabs li a {
       border: none;
       border-bottom: 2px solid transparent;
-      padding: 10px 50px 8px; }
+      padding: 10px 50px 8px;
+      font-weight: 600; }
     .news-events-view .nav-tabs li.active a, .news-events-view .nav-tabs li.active a:hover, .news-events-view .nav-tabs li.active a:focus {
       border: none;
       border-bottom: 2px solid #772ab3;
@@ -350,6 +358,12 @@ section h1, section p {
     border-color: #17995b; }
     #myCarousel-1 .carousel-indicators li.active {
       background-color: #17995b; }
+
+.contact-form .col {
+  border-right: 1px solid rgba(0, 0, 0, 0.1); }
+
+.contact-form .address {
+  padding: 30px 0 0 30px; }
 
 .lable-strip {
   background: #da5004; }
@@ -423,7 +437,8 @@ section h1, section p {
     .inner-banner .breadcrum a {
       color: #ffffff;
       font-size: 16px;
-      line-height: 30px; }
+      line-height: 30px;
+      text-decoration: none; }
   .inner-banner .inner-bg {
     position: absolute;
     top: 0px;
@@ -434,10 +449,14 @@ section h1, section p {
 .inner-section-03 {
   background: #dfeaff;
   padding: 40px 0 0 0; }
-  .inner-section-03 #myCarousel-1 .carousel-indicators li {
-    border-color: #662d91; }
-    .inner-section-03 #myCarousel-1 .carousel-indicators li.active {
-      background: #662d91; }
+  .inner-section-03 #myCarousel-1 {
+    margin: 0px 0px 50px; }
+    .inner-section-03 #myCarousel-1 .slick-prev, .inner-section-03 #myCarousel-1 .slick-next {
+      display: none !important; }
+    .inner-section-03 #myCarousel-1 .carousel-indicators li {
+      border-color: #662d91; }
+      .inner-section-03 #myCarousel-1 .carousel-indicators li.active {
+        background: #662d91; }
   .inner-section-03 h3, .inner-section-03 h4 {
     font-weight: 700;
     font-size: 30px; }
@@ -561,23 +580,28 @@ ul.list {
 
 .footer {
   background: #3f2255;
-  padding: 25px 0;
-  font-weight: normal; }
+  padding: 25px 0; }
   .footer .btn {
     border: 1px solid #fff !important;
     padding: 6px 12px; }
   .footer h4, .footer p, .footer h5 {
     color: #fff; }
   .footer h4 {
-    font-size: 20px; }
+    font-size: 20px;
+    font-weight: 700; }
   .footer svg {
     fill: #fff; }
   .footer .social-media {
     margin-top: 20px; }
   .footer .address {
     margin-top: 20px; }
+    .footer .address h5 {
+      font-weight: 600; }
     .footer .address p {
-      font-size: 14px; }
+      font-size: 14px;
+      font-weight: 300; }
+      .footer .address p b {
+        font-weight: 600; }
   .footer .footer-logo {
     margin: 35px 0px; }
     .footer .footer-logo img {
@@ -611,7 +635,9 @@ ul.list {
       top: 100px;
       z-index: 0;
       right: 15px;
-      top: 0px; }
+      top: 0px;
+      border: none;
+      padding: 5px 12px; }
     .bw-header.fixed {
       position: relative; }
     .bw-header .logo {
@@ -654,6 +680,8 @@ ul.list {
       background: #17995b; }
   .form-inline .form-group, .donation-form .form-inline .form-group {
     width: 100%; }
+    .form-inline .form-group:nth-child(2), .donation-form .form-inline .form-group:nth-child(2) {
+      margin: 0px; }
   .d-flex, .v-align {
     display: block; }
   .events-view .card {
