--- a/mtj/scss/main.scss
+++ b/mtj/scss/main.scss
@@ -6,7 +6,7 @@ body {
 	font-size:16px;
 	color: #5B5B5B;
 	p, a{
-		font-weight: 300; 
+		font-weight: 400; 
 	}
 }
 
@@ -22,6 +22,10 @@ img{
 h1, h2, h3, h4, h5, h6{
 	font-family:'Poppins', sans-serif; 
 	margin:0px 0px 10px;
+}
+
+.form-control {
+	height:45px;
 }
  
 .form-inline {
@@ -86,10 +90,11 @@ svg:not(:root) {
 }
 
 .btn-primary{
-	background:#772ab3;
-	border:none !important;  
-	&:hover{
-		background:#570596;
+	background:#772ab3;  
+	border:2px solid #772ab3;
+	&:hover, &:active, &:focus{
+		background:#570596 !important;
+		border:2px solid #570596 !important;
 	}
 }
 
@@ -118,7 +123,7 @@ li{
 	&.fixed{
 		position: fixed;
 		width: 100%;
-		z-index: 2;
+		z-index: 20;
 		box-shadow: 1px 0px 5px rgba(0,0,0,0.50);
 		.logo{
 			background:none;
@@ -167,13 +172,14 @@ li{
 		li{
 			background-color:#fff;
 			border-radius: 3px;
-			margin:0 3px;
+			margin:0 10px;
 			overflow: hidden;
 			a{
 				color:#212121; 
 				text-shadow: none;
 				text-transform: uppercase;
 				padding: 5px 10px; 
+				font-weight: 500;
 				&:focus, &:hover{
 					background-color:#d9ede4;
 					color:#212121;  
@@ -210,6 +216,9 @@ li{
 	z-index: 99999;
 	right:-40%;
 	transition: all .2s;
+	h1{
+		margin-bottom:30px;
+	}
 }
 .d-form-overlay{
 	background: rgba(0,0,0,0.70);
@@ -366,6 +375,7 @@ section{
 				border:none;
 				border-bottom:2px solid transparent;
 				padding: 10px 50px 8px;
+				font-weight:600;
 			}
 			&.active{
 				a, a:hover,  a:focus{
@@ -463,6 +473,14 @@ section{
 	}
 }
 
+.contact-form{
+	.col{
+		border-right:1px solid rgba(0, 0, 0, 0.1);
+	}
+	.address{
+		padding:30px 0 0 30px;
+	}
+}
 
 .lable-strip{
 	background:#da5004;
@@ -552,6 +570,7 @@ section{
 				color: #ffffff;
 				font-size: 16px;
 				line-height: 30px;	
+				text-decoration: none;
 			}
 		}
 	.inner-bg{
@@ -566,6 +585,10 @@ section{
 	background:#dfeaff;
     padding: 40px 0 0 0;
 	#myCarousel-1 {
+		margin:0px 0px 50px;
+		.slick-prev, .slick-next{
+			display:none !important;
+		}
 		.carousel-indicators {
 			li{
 				border-color:#662d91;;
@@ -744,7 +767,6 @@ ul.list {
 .footer{
 	background:#3f2255;  
 	padding:25px 0;
-	font-weight: normal;
 	.btn{
 		border:1px solid #fff !important; 
 		padding:6px 12px;
@@ -754,6 +776,7 @@ ul.list {
 	}
 	h4{
 		font-size:20px;
+		font-weight: 700;
 	}
 	svg{
 		fill: #fff;    
@@ -763,8 +786,15 @@ ul.list {
 	}
 	.address{
 		margin-top:20px;
+		h5{
+			font-weight:600;
+		}
 		p{
 			font-size:14px;
+			font-weight: 300;
+			b{
+				font-weight: 600;
+			}
 		}
 	}
 	.footer-logo{ 
@@ -814,6 +844,8 @@ ul.list {
 			z-index:0;
 			right: 15px;
 			top: 0px;
+			border: none;
+    		padding: 5px 12px;
 		}
 		&.fixed{
 			position: relative;
@@ -878,6 +910,9 @@ ul.list {
 
 	.form-inline .form-group, .donation-form .form-inline .form-group{
 		width: 100%;
+		&:nth-child(2){
+			margin:0px;
+		}
 	}
 
 	.d-flex, .v-align{
