--- a/mtj/css/main.css
+++ b/mtj/css/main.css
@@ -23,14 +23,15 @@ h1, h2, h3, h4, h5, h6 {
 .form-control {
   height: 45px; }
 
-.form-inline {
-  margin-bottom: 15px; }
-  .form-inline .form-group {
-    width: 48%; }
-    .form-inline .form-group:nth-child(2) {
-      margin-left: 3%; }
-    .form-inline .form-group .form-control {
-      width: 100%; }
+.form-group, .form-inline {
+  margin-bottom: 20px; }
+
+.form-inline .form-group {
+  width: 48%; }
+  .form-inline .form-group:nth-child(2) {
+    margin-left: 3%; }
+  .form-inline .form-group .form-control {
+    width: 100%; }
 
 .mt-0 {
   margin: 0px; }
@@ -71,7 +72,8 @@ svg:not(:root) {
 .btn {
   border-radius: 3px;
   text-transform: uppercase;
-  padding: 12px; }
+  padding: 12px;
+  font-weight: 500; }
 
 .btn-primary {
   background: #772ab3;
@@ -364,7 +366,7 @@ section h1, section p {
   border-right: 1px solid rgba(0, 0, 0, 0.1); }
 
 .contact-form .address {
-  padding: 30px 0 0 30px; }
+  padding: 45px 0 0 30px; }
 
 .lable-strip {
   background: #da5004; }
@@ -420,7 +422,20 @@ section h1, section p {
       border-left: 5px solid #e7430a;
       padding: 25px; }
 
+.news-events-view-more {
+  padding: 50px 0 10px; }
+  .news-events-view-more .card-title {
+    font-weight: 500;
+    font-size: 18px; }
+  .news-events-view-more .row {
+    border-top: 1px dashed #ccc;
+    padding-top: 50px; }
+    .news-events-view-more .row:first-child {
+      border: none;
+      padding: 0; }
+
 .inner-banner {
+  background: #662e91;
   position: relative;
   height: 380px;
   display: flex;
@@ -540,7 +555,7 @@ ul.list {
     text-decoration: none; }
 
 .main-banner {
-  background: url(../images/banner-1.png) no-repeat top center;
+  background: url(../images/banner-1.png) no-repeat top center #662e91;
   background-size: cover;
   height: 750px; }
   .main-banner .container {
