--- a/mtj/scss/main.scss
+++ b/mtj/scss/main.scss
@@ -27,9 +27,12 @@ h1, h2, h3, h4, h5, h6{
 .form-control {
 	height:45px;
 }
+
+.form-group, .form-inline{
+	margin-bottom:20px;
+}
  
 .form-inline {
-	margin-bottom:15px;
 	.form-group{
 		width:48%;
 		&:nth-child(2){
@@ -87,6 +90,7 @@ svg:not(:root) {
 	border-radius:3px; 
 	text-transform: uppercase;
 	padding:12px;
+	font-weight: 500;
 }
 
 .btn-primary{
@@ -480,7 +484,7 @@ section{
 		border-right:1px solid rgba(0, 0, 0, 0.1);
 	}
 	.address{
-		padding:30px 0 0 30px;
+		padding:45px 0 0 30px;
 	}
 }
 
@@ -552,7 +556,24 @@ section{
 	}
 }
 
+.news-events-view-more{
+		padding:50px 0 10px;
+		.card-title{
+			font-weight:500;
+			font-size: 18px;
+		}
+		.row{
+			border-top:1px dashed #ccc;
+			padding-top:50px;
+			&:first-child{
+				border:none;
+				padding:0;
+			}
+		}
+}
+
 .inner-banner{
+	background:#662e91;
 	position: relative;
 	height:380px;
 	display: flex;
@@ -713,7 +734,7 @@ ul.list {
 }
 
 .main-banner {
-	background: url(../images/banner-1.png) no-repeat top center;
+	background: url(../images/banner-1.png) no-repeat top center #662e91;
 	background-size: cover;
 	height:750px;
 	.container{
