--- a/mtj/scss/main.scss
+++ b/mtj/scss/main.scss
@@ -4,7 +4,6 @@ body {
 	font-family: 'Poppins', sans-serif;
 	background:#fff;
 	font-size:16px;
-	color: #5B5B5B;
 	p, a{
 		font-weight: 400; 
 	}
@@ -22,6 +21,9 @@ img{
 h1, h2, h3, h4, h5, h6{
 	font-family:'Poppins', sans-serif; 
 	margin:0px 0px 10px;
+}
+h2{
+	color:#333;
 }
 
 .form-control {
@@ -87,15 +89,17 @@ svg:not(:root) {
 	font-weight:500;
 }
 .btn{
-	border-radius:3px; 
+	border-radius:5px; 
 	text-transform: uppercase;
 	padding:12px;
 	font-weight: 500;
+	border:1px solid #fff;
+
 }
 
 .btn-primary{
 	background:#772ab3;  
-	border:2px solid #772ab3;
+	border:1px solid #772ab3;
 	&:hover, &:active, &:focus{
 		background:#570596 !important;
 		border:2px solid #570596 !important;
@@ -330,7 +334,7 @@ section{
 		background:#fff; 
 		box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.10);
 		text-align: center;
-		padding:15px;
+		padding:10px;
 		border-radius:5px;
 		cursor:pointer;
 		p{
@@ -353,7 +357,7 @@ section{
 
 .section-03{
 	margin:40px 0px;
-	background-image:linear-gradient(to right, #17995b 50% , transparent 50%);
+	background-image:linear-gradient(to right, #17995b 40% , transparent 0%);
 	
 	.endo-info{
 		padding:15px;
@@ -422,7 +426,6 @@ section{
 
 #myCarousel-1{
 	height:500px;
-	margin-left: 40px;
 	&.slider{
 		height:auto;
 		.slick-dots {
@@ -472,6 +475,9 @@ section{
 	.carousel-indicators{
 		li{
 			border-color:#17995b;
+			margin:0 3px;
+			width:12px;
+			height:12px;
 			&.active{
 				background-color: #17995b;
 			}
@@ -716,20 +722,23 @@ ul.list {
 		fill:#e7430a;
 	}
 
-	.copyright {
-		background: #e7430a;
-		color: #fff;
-		font-size: 14px;
-		padding: 15px 0;
 
-		p {
-			padding: 0px;
-			margin: 0px;
-		}
-	}
 	a{
 		color:#333333;
 		text-decoration: none;
+	}
+}
+.copyright {
+	background:#1c0f25;
+	color: #fff;
+	font-size: 14px;
+	padding: 15px 0;
+
+	p {
+		padding: 0px;
+		margin: 0px;
+		text-align:center;
+		font-size:12px;
 	}
 }
 
@@ -762,7 +771,7 @@ ul.list {
 	}	
 	.carousel-caption{
 			padding:15px;  
-			width:40%;  
+			width:60%;  
 			left: -15px;
 			text-align:left;
 			top: 50%;
@@ -782,6 +791,8 @@ ul.list {
 				}
 				.btn{
 					margin-top:15px;
+					border-color:#fff;
+					text-transform: capitalize;
 				}
 		
 	}
@@ -799,7 +810,8 @@ ul.list {
 	}
 	h4{
 		font-size:20px;
-		font-weight: 700;
+		font-weight: 600;
+		text-transform:uppercase;
 	}
 	svg{
 		fill: #fff;    
@@ -821,11 +833,11 @@ ul.list {
 		}
 	}
 	.footer-logo{ 
-		margin: 35px 0px;
+		margin: 20px 0px;
 		img{
 			background: #fff;
     		padding: 10px;
-			width:40%;  
+			width:30%;  
 		}
 	}
 	.phone{
@@ -837,7 +849,7 @@ ul.list {
 	.footer-li{
 		margin-bottom:35px;
 		li{
-			padding:10px 0;
+			padding:5px 0;
 			list-style: disc inside;
 			color:#fff;
 			a{
